--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -34,7 +34,7 @@ spring:
         type: com.zaxxer.hikari.HikariDataSource
         url: jdbc:mysql://localhost:3306/socleJava?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
-        password:
+        password: dev123
         hikari:
             data-source-properties:
                 cachePrepStmts: true
